<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

    <RelativeLayout
            android:id="@+id/descLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            >
        <TextView
                android:id="@+id/gameTypeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Game Type (5/0, 5/5, etc)"
                />

    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descLayout">


        <TextView
                android:id="@+id/playerOneName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameTypeDescription"
                android:text="Player One Username"
                />


        <Button
                android:id="@+id/player1button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/playerOneName"
                android:text="@string/playerOneButton"
                />


        <Button
                android:id="@+id/player2button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/playerTwoName"
                android:text="@string/playerTwoButton"
                />


        <TextView
                android:id="@+id/playerTwoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/player1button"
                android:text="Player Two Username"
                />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/inputLayout">
        <Button
                android:id="@+id/pause"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/pause"
                />
        <Button
                android:id="@+id/restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/pause"
                android:layout_alignParentBottom="true"

                android:text="@string/restart"
                />
        <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/restart"
                android:layout_alignParentBottom="true"
                android:text="@string/save"
                android:enabled="false"
                />



    </RelativeLayout>
</RelativeLayout>